Align text correctly in summary block (#39)

--- a/frontend/src/style/annotation.sass
+++ b/frontend/src/style/annotation.sass
@@ -2,6 +2,7 @@
     @extend .tag
     height: unset !important
     white-space: pre-line !important
+    justify-content: unset !important
     max-width: 200px
 
     &.is-highlighted
